--- a/css/styles.css
+++ b/css/styles.css
@@ -106,21 +106,42 @@ button:focus {
 }
 .B-Btext{   
     background-color: black;
-    color: white
+    color: white;
 }
 
 /* About page content */
 .about-container{
     display: grid;
+    
 }
 .about-container__item{
     list-style-type: circle;
     margin: 12px auto;
 }
 
+/* Works page content */
+.project-list__item{
+    display: inline-block;
+    width: 33%;
+}
+.project-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+}
+.project-list__item {
+    background-color: lightgray;
+    padding: 12px;
+    width: auto;
+}
+.project-list__item:last-child {
+    grid-column: 3 / 3;
+    grid-row: 1 / 3;
+} 
+
 /* Contact page content */
 .contact {
-    max-width: 30vw;
+    max-width: 700px;
     margin: 70px auto;
   }
 #contact-form{
