--- a/css/styles.css
+++ b/css/styles.css
@@ -96,10 +96,6 @@ button:focus {
     flex: 0 1 200px;
 }
 
-/* .main-navigation{
-    flex-grow: 1;
-    text-align: right;
-} */
 .page-header__item:last-child {
     flex-grow: 1;
     text-align: right;
@@ -121,6 +117,7 @@ button:focus {
 }
 .navigation-list__item--active {
     text-decoration: none;
+    color: var(--primary-color)
 }
 .dropbtn {
     display: none;
@@ -136,7 +133,7 @@ button:focus {
     background-color: var(--body-color);
     max-width: 160px;
     box-shadow: var(--shadow);
-    z-index: 1; 
+    margin-top: 12px;
 }
 
 .dropdown-menu:hover .dropdown-menu-list {
@@ -146,17 +143,18 @@ button:focus {
 .dropdown-menu-list a {
     float: none;
     font-size: 15px;
-    color: var(--primary-color);
-    padding: 12px 16px;
+    color: var(--primary-color-lighten);
+    padding: 12px 26px;
     text-decoration: none;
     display: block;
     text-align: left;
 }
 
-.hr-break{
-    border: lightgrey 1px solid;
+/* .hr-break{
+    border: lightgrey 0.7px solid;
     margin: 0 -15px 0 -15px;
-}
+    width: 100%;
+} */
 
 /* Home page content */
 .profile {
@@ -168,14 +166,13 @@ button:focus {
 .profile__portrait {
     float: left;
     width: 350px;
-    margin-right: 40px;
+    margin: 60px 50px;
     border-radius: 50%;
     box-shadow: var(--shadow);
 
 }
 .profile-description{
-    padding-top: 50px;
-    
+    padding-top: 60px;
 }
 .B-Btext{
     background-color: var(--primary-color);
@@ -185,13 +182,15 @@ button:focus {
 /* About page content */
 .about-container{
     display: grid;
+    margin: 60px auto;
 }
 .about-container__item{
     list-style-type: circle;
     margin: 12px auto;
 }
 /* Works page content */
-.project-list__item{
+
+.project-list__item { /* Fallback Grid */
     display: inline-block;
     width: 33%;
 }
@@ -200,6 +199,12 @@ button:focus {
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
 }
+.project-list__item{
+    display: inline-block;
+    width: 33%;
+    box-shadow: var(--shadow);
+}
+
 .project-list__item {
     background-color: lightgray;
     padding: 12px;
@@ -210,26 +215,31 @@ button:focus {
     grid-row: 1 / 3;
 } 
 /* Contact page content */
+.contact-container{
+    margin: 80px 10%;
+}
 #contact-form{
     margin-top: 50px;
 }
 
 #contact-mes{
-    width: 400px;
+    width: 300px;   
     height: 200px;
+    padding: 10px 4px;
 }
+
 /* footer */
 footer {
     clear: both;
     text-align: center;
-    margin-top: 80px;
+    margin-top: 120px;
 }
 
 /* Media Queries */
 
-/* Laptop */
-@media all and (max-width: 900px) {
-    .project-list {
+/* Tablet */
+@media all and (max-width: 1020px) {
+        .project-list {
         grid-template-columns: 1fr 1fr;
         grid-gap: 10px;
     }
@@ -237,21 +247,9 @@ footer {
         grid-column: auto / auto;
         grid-row: auto / auto;
     } 
-}
-/* Tablet */
-@media all and (max-width: 700px) {
     .page-header {
       padding-top: 0;
     }
-  
-    .navigation-list__item {
-      display: none;
-    }
-  
-    .dropbtn {
-      display: block;
-    }
-  
     .profile,
     .contact,
     .about,
@@ -263,10 +261,27 @@ footer {
     .about__table {
       width: 100%;
     }
+    .profile{
+        display: grid;
+        grid-template-rows: 2fr 1fr;
+    }
+    .profile__portrait{
+        margin: 80px auto;
+    }
+    .profile-description{
+        padding-top: 0;
+        text-align: center
+    }
 }
 
 /* Mobile */
-@media all and (max-width: 500px) {
+@media all and (max-width: 720px) {
+    .navigation-list__item {
+        display: none;
+      }
+      .dropbtn {
+        display: block;
+      }
     .page-header{
         padding-left: -100px;
     }
@@ -277,12 +292,11 @@ footer {
     .project-list__item:last-child {
         grid-column: auto / auto;
         grid-row: auto / auto;
-    } 
-    .profile{
-        display: grid;
-        grid-template-rows: 2fr 1fr;
     }
-    .profile-description{
-        padding-top: 0;
+    .contact-container{
+        margin: 80px 20%;
+    }
+    #contact-mes{
+        width: 70vw;
     }
 }
