--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,8 @@ Primary Color lightne: #0000CD; (Blue Klein)
 Secondary Color:       #81D8D0; (Blue Tiffany)
 Tertiary Color:        #A9A9A9; (Darkgrey)
 Text Color:   
-
-Primary text font:     'Merriweather', serif
-Secondary text font:   'Archivo Narrow', sans-serif;
+Primary text font:     'Noto Serif TC', serif
+Secondary text font:   'Noto Serif', serif;
 */
 :root {
     --primary-color: #000080;
@@ -18,59 +17,55 @@ Secondary text font:   'Archivo Narrow', sans-serif;
     --shadow-darken :3px 5px 7px 1px rgba(0,0,0,0.3);
     --weight-bold: 700;
     --body-color: #f8fafa;
-    --primary-font: 'Merriweather', serif;
-    --secondary-font: 'Archivo Narrow', sans-serif;
+    --primary-font: 'Noto Serif TC', serif;
+    --secondary-font: 'Noto Serif', serif;
+    --text-size: 15px;
+    --h1-size: 34px;
+    --h2-size: 28px;
+    --h3-size: 22px;
 }
-
 * { 
     box-sizing: border-box;
 }
-
 body {
     background: var(--body-color);
     font-family: var(--primary-font);
     font-weight: 400;
-    font-size: 16px;
+    font-size: var(--text-size);
     line-height: 1.6;
     margin: 1%;
     height: 100vh;
 }
 h1 {
-    font-size: 36px;
+    font-size: var(--h1-size);
     font-weight: var(--weight-bold);
     font-family: var(--secondary-font);
-
 }
 h2 {
-    font-size: 30px;
+    font-size: var(--h2-size);
     font-weight: var(--weight-bold);
     font-family: var(--secondary-font);
 }
 h3 {
-    font-size: 24px;
+    font-size: var(--h3-size);
     font-weight: var(--weight-bold);
     font-family: var(--secondary-font);
 }
-
 a {
     color: var(--primary-color-lighten);
-}
-a:visited {
-    color: var(--secondary-color);
 }
 a:hover, a:focus {
     text-decoration: none;
     opacity: 0.7;
     transition: 0.1s opacity;
 }
-
 .button,
 button {
     border: none;
     display: inline-block;
     font-family: inherit;
     background-color: var(--primary-color);
-    color: white;
+    color: var(--body-color);
     text-decoration: none;
     padding: 8px;
     border-radius: 3px;
@@ -79,48 +74,42 @@ button {
 }
 .button:hover,
 .button:focus,
-button:hover, 
+button:hover,
 button:focus {
     cursor: pointer;
     opacity: 0.89;
     box-shadow: var(--shadow);
-
 }
-
 /* NAV */
 .page-header {
     display: flex;
     width: 100%;
     padding: 0 10px 0 0;
 }
+.navigation__logo {
+    left: 20px;
+    height: 60px;
+}
+.navigation__logoname {
+    left: 20px;
+    height: 50px;
+    margin-top: 12px;
+}
 .page-header__item {
     flex: 0 1 200px;
+    list-style-type: none;
+    color: var(--primary-color-lighten);
 }
-
 .page-header__item:last-child {
     flex-grow: 1;
     text-align: right;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-  }
-
-.navigation__logo {
-    left: 20px;
-    height: 100px;
-}
-.navigation__logoname {
-    left: 20px;
-    height: 50px;
-    margin-top: 42px
-}
-.navigation-list{
-    list-style-type: none;
 }
 .navigation-list li {
     display: inline-block;
     margin-right:10px;
-    
 }
 .navigation-list__item--active {
     text-decoration: none;
@@ -130,9 +119,8 @@ button:focus {
     display: none;
     font-size: 15px;
     padding: 7px 20px;
-    margin: 0 30px
+    margin: 0 30px;
 }
-
 .dropdown-menu-list {
     display: none;
     border-radius: 3px;
@@ -142,11 +130,9 @@ button:focus {
     box-shadow: var(--shadow);
     margin-top: 12px;
 }
-
 .dropdown-menu:hover .dropdown-menu-list {
     display: block;
 }
-
 .dropdown-menu-list a {
     float: none;
     font-size: 15px;
@@ -156,19 +142,16 @@ button:focus {
     display: block;
     text-align: left;
 }
-
 /* .hr-break{
     border: lightgrey 0.7px solid;
     margin: 0 -15px 0 -15px;
     width: 100%;
 } */
-
 /* Home page content */
 .profile {
     max-width: 700px;
     margin: 20px auto;
     box-sizing: border-box;
-
 }
 .profile__portrait {
     float: left;
@@ -176,7 +159,6 @@ button:focus {
     margin: 60px 50px;
     border-radius: 50%;
     box-shadow: var(--shadow-darken);
-
 }
 .profile-description{
     padding-top: 60px;
@@ -185,7 +167,6 @@ button:focus {
     background-color: var(--primary-color);
     color: var(--body-color);
 }
-
 /* About page content */
 .about-container{
     display: grid;
@@ -196,8 +177,8 @@ button:focus {
     margin: 12px auto;
 }
 /* Works page content */
-
-.project-list__item { /* Fallback Grid */
+ /* Fallback Grid */
+ .project-list__item {
     display: inline-block;
     width: 33%;
 }
@@ -206,13 +187,10 @@ button:focus {
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
 }
-.project-list__item{
+.project-list__item {
     display: inline-block;
     width: 33%;
     box-shadow: var(--shadow-darken);
-}
-
-.project-list__item {
     background-color: lightgray;
     padding: 12px;
     width: auto;
@@ -221,6 +199,7 @@ button:focus {
     grid-column: 3 / 3;
     grid-row: 1 / 3;
 } 
+
 /* Contact page content */
 .contact-container{
     margin: 80px 10%;
@@ -228,19 +207,21 @@ button:focus {
 #contact-form{
     margin-top: 50px;
 }
-
 #contact-mes{
     width: 300px;   
     height: 200px;
     padding: 10px 4px;
-    border: solid lightgrey 0.3px
+    border: solid lightgrey 0.3px;
 }
 #contact-tel:hover,
 #contact-email:hover,
 #contact-mes:hover {
     box-shadow: var(--shadow);
     border: solid lightgrey 0.6px;
-
+}
+.legend{
+    font-size: 6pt;
+    color: darkgrey;
 }
 /* footer */
 footer {
@@ -248,9 +229,7 @@ footer {
     text-align: center;
     margin-top: 120px;
 }
-
 /* Media Queries */
-
 /* Tablet */
 @media all and (max-width: 1020px) {
         .project-list {
@@ -260,7 +239,7 @@ footer {
     .project-list__item:last-child {
         grid-column: auto / auto;
         grid-row: auto / auto;
-    } 
+    }
     .page-header {
       padding-top: 0;
     }
@@ -271,7 +250,6 @@ footer {
       margin-top: 25px;
       padding: 0 10px;
     }
-  
     .about__table {
       width: 100%;
     }
@@ -287,7 +265,6 @@ footer {
         text-align: center
     }
 }
-
 /* Mobile */
 @media all and (max-width: 720px) {
     body{
