--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,8 @@ Secondary text font:   'Noto Serif', serif;
     --primary-color: #000080;
     --primary-color-lighten: #0000CD;
     --secondary-color: #81D8D0;
-    --tertiary-color: darkgrey;
+	--tertiary-color: Darkgrey;
+	--tertiary-color-lighten: lightgrey;
     --shadow: 1px 3px 5px 0px rgba(0,0,0,0.3);
     --shadow-darken :3px 5px 7px 1px rgba(0,0,0,0.3);
     --weight-bold: 700;
@@ -94,6 +95,24 @@ button:focus {
     left: 20px;
     height: 50px;
     margin-top: 12px;
+}
+.namelogo{
+	font-family: var(--primary-font);
+	line-height: 13px;
+	text-align: center;
+	margin-top: 28px;
+	margin-left: 20px;	
+}
+.namelogo-name{
+	font-size: 11pt;
+	font-weight: var(--weight-bold);
+}
+.namelogo-caption{
+	font-size: 7pt;
+	text-align: center;
+	letter-spacing: 2px;
+	color: VAR(--primary-color);
+	text-decoration: underline
 }
 .page-header__item {
     flex: 0 1 200px;
@@ -191,13 +210,14 @@ button:focus {
     display: inline-block;
     width: 33%;
     box-shadow: var(--shadow-darken);
-    background-color: lightgray;
+    background-color: var(--tertiary-color-lighten);
     padding: 12px;
     width: auto;
 }
 .project-list__item:last-child {
     grid-column: 3 / 3;
-    grid-row: 1 / 3;
+	grid-row: 1 / 3;
+	margin-right: 40px; /* ADD some margin to this page  */
 } 
 
 /* Contact page content */
@@ -211,17 +231,17 @@ button:focus {
     width: 300px;   
     height: 200px;
     padding: 10px 4px;
-    border: solid lightgrey 0.3px;
+    border: solid var(--tertiary-color-lighten) 0.3px;
 }
 #contact-tel:hover,
 #contact-email:hover,
 #contact-mes:hover {
     box-shadow: var(--shadow);
-    border: solid lightgrey 0.6px;
+    border: solid var(--tertiary-color-lighten) 0.6px;
 }
 .legend{
     font-size: 6pt;
-    color: darkgrey;
+    color: var(--tertiary-color);
 }
 /* footer */
 footer {
