--- a/css/styles.css
+++ b/css/styles.css
@@ -12,13 +12,13 @@ Secondary text font:   'Merriweather', serif
     --primary-color: #000080;
     --primary-color-lighten: #0000CD;
     --secondary-color: #81D8D0;
-	--tertiary-color: Darkgrey;
+	--tertiary-color: rgb(197, 195, 195);
 	--tertiary-color-lighten: rgb(223, 223, 223);
     --shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
     --shadow-darken :3px 5px 7px 1px rgba(0,0,0,0.3);
     --weight-bold: 700;
 	--body-color: #f8fafa;
-	--body-color-darken: #f0f0f0;
+	--body-color-darken: #f5f5f5;
     --primary-font: 'Caudex', serif;
     --secondary-font: 'Merriweather', serif;
     --text-size: 12pt;
@@ -81,7 +81,7 @@ button:focus {
     box-shadow: var(--shadow);
 }
 .legend{
-    font-size: 6pt;
+    font-size: 7pt;
     color: var(--tertiary-color);
 }
 
@@ -164,17 +164,17 @@ button:focus {
     text-align: left;
 }
 /* INDEX page content */
-.profile {
+.profile-container {
     max-width: 900px;
 	margin: 20px auto;
 	padding: 0 40px;
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 .profile__portrait {
     float: left;
-    width: 350px;
+    width: 370px;
     margin: 60px 50px;
-    border-radius: 50%;
+    border-radius: 20%;
     box-shadow: var(--shadow-darken);
 }
 .profile-description{
@@ -242,26 +242,30 @@ svg{
     display: inline-block;
     width: 33%;
 }
+.work-container{
+	margin: 0 40px;
+}
 .project-list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 	grid-gap: 20px;
-	padding: 0 40px;
 }
 .project-list__item {
     display: inline-block;
     width: 33%;
     box-shadow: var(--shadow-darken);
     background-color: var(--tertiary-color-lighten);
-    padding: 12px;
+    padding: 10px 20px;
     width: auto;
 }
 .project-list__item:last-child {
     grid-column: 3 / 3;
 	grid-row: 1 / 3;
-	margin-right: 40px; /* ADD some margin to this page  */
+	font-size: 1.1em
 } 
-
+.project-list__item:last-child a{
+	margin: 0 auto;
+}
 /* CONTACT page content */
 .contact-container{
     max-width: 900px;
@@ -317,7 +321,7 @@ footer {
     .about__table {
       width: 100%;
     }
-    .profile{
+    .profile-container{
         display: grid;
         grid-template-rows: 2fr 1fr;
     }
