--- a/css/styles.css
+++ b/css/styles.css
@@ -278,13 +278,15 @@ svg{
     width: 300px;   
     height: 200px;
     padding: 10px 4px;
-    border: solid var(--tertiary-color-lighten) 0.3px;
+	border: solid var(--tertiary-color-lighten) 0.3px;
+	min-height: 60px;
 }
-#contact-tel:hover,
-#contact-email:hover,
-#contact-mes:hover {
-    box-shadow: var(--shadow);
-    border: solid var(--tertiary-color-lighten) 0.6px;
+#contact-tel:focus,
+#contact-email:focus,
+#contact-mes:focus {
+	border: solid var(--primary-color-lighten) 1.4px;
+	outline: none !important;
+    box-shadow: var(--shadow)
 }
 /* footer */
 footer {
