--- a/css/styles.css
+++ b/css/styles.css
@@ -218,10 +218,10 @@ thead th{
 	font-family: var(--secondary-font);
 	text-align: left;
 	width: 80px;
-	padding: 0 30px 0 0;
+	margin: 0 4% 0 0;
 }
 tr :last-child{
-	width:180px;
+	width:190px;
 }
 svg{
 	width: 60%;
