--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /*
 Colors used 
 Primary Color:         #000080; (Dark Blue Klein)
-Primary Color lightne: #0000CD; (Blue Klein)
+Primary Color lighten: #0000CD; (Blue Klein)
 Secondary Color:       #81D8D0; (Blue Tiffany)
 Tertiary Color:        #A9A9A9; (Darkgrey)
 Text Color:   
@@ -12,8 +12,8 @@ Secondary text font:   'Merriweather', serif
     --primary-color: #000080;
     --primary-color-lighten: #0000CD;
     --secondary-color: #81D8D0;
-	--tertiary-color: rgb(197, 195, 195);
-	--tertiary-color-lighten: rgb(223, 223, 223);
+	--tertiary-color: #C5C3C3;
+	--tertiary-color-lighten: #DFDFDF;
     --shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
     --shadow-darken :3px 5px 7px 1px rgba(0,0,0,0.3);
     --weight-bold: 700;
@@ -134,7 +134,7 @@ button:focus {
 }
 .navigation-list__item--active {
     text-decoration: none;
-    color: var(--primary-color)
+    color: var(--primary-color);
 }
 .dropbtn {
     display: none;
@@ -261,7 +261,7 @@ svg{
 .project-list__item:last-child {
     grid-column: 3 / 3;
 	grid-row: 1 / 3;
-	font-size: 1.1em
+	font-size: 1.1em;
 } 
 .project-list__item:last-child a{
 	margin: 0 auto;
@@ -286,7 +286,7 @@ svg{
 #contact-mes:focus {
 	border: solid var(--primary-color-lighten) 1.4px;
 	outline: none !important;
-    box-shadow: var(--shadow)
+    box-shadow: var(--shadow);
 }
 /* footer */
 footer {
