--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@ Secondary text font:   'Merriweather', serif
 :root {
     --primary-color: #000080;
     --primary-color-lighten: #0000CD;
-    --secondary-color: #81D8D0;
-	--tertiary-color: #C5C3C3;
+    --secondary-color: #0000FF;
+	--tertiary-color: rgb(156, 156, 156);
 	--tertiary-color-lighten: #DFDFDF;
     --shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
     --shadow-darken :3px 5px 7px 1px rgba(0,0,0,0.3);
@@ -59,6 +59,9 @@ a:hover, a:focus {
     text-decoration: none;
     opacity: 0.7;
     transition: 0.1s opacity;
+}
+a :visited{
+    color: var(--Secondary-color);
 }
 .button,
 button {
