--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,6 @@ Secondary text font:   'Merriweather', serif
     --text-size: 12pt;
     --h1-size: 2.6em;
     --h2-size: 1.4em;
-    --h3-size: 1.1em
 }
 
 * { 
@@ -47,12 +46,6 @@ h1 {
 
 h2 {
     font-size: var(--h2-size);
-    font-weight: var(--weight-bold);
-    font-family: var(--secondary-font);
-}
-
-h3 {
-    font-size: var(--h3-size);
     font-weight: var(--weight-bold);
     font-family: var(--secondary-font);
 }
@@ -103,7 +96,6 @@ button:focus {
 }
 
 .navigation__logo {
-    /* padding-left: 10px; */
     height: 60px;
 }
 
@@ -120,6 +112,7 @@ button:focus {
     font-size: 13pt;
     font-weight: var(--weight-bold);
 }
+
 a .namelogo-name {
     color: black;
 }
@@ -224,6 +217,11 @@ a .namelogo-name {
 .about-container__item{
     list-style-type: circle;
     margin: 10px auto;
+}
+
+.strong{
+    font-family: var(--secondary-font);
+    font-weight: var(--weight-bold)
 }
 
 .centerBtn{
