--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ Secondary text font:   'Merriweather', serif
     --body-color-darken: #f5f5f5;
     --primary-font: 'Caudex', serif;
     --secondary-font: 'Merriweather', serif;
-    --text-size: 14pt;
+    --text-size: 13pt;
     --h1-size: 2.6em;
     --h2-size: 1.4em;
 }
@@ -184,8 +184,7 @@ a .namelogo-name {
 /* INDEX page content */
 .profile-container {
     max-width: 900px;
-    margin: 20px auto;
-    padding: 0 40px;
+    margin: 6% auto;
     box-sizing: border-box;
 }
 
@@ -199,11 +198,14 @@ a .namelogo-name {
 
 .profile-description{
     padding-top: 60px;
+    /* width: 390px */
 }
 
 .B-Btext{
     background-color: var(--primary-color);
     color: var(--body-color);
+    border-radius: 10%;
+
 }
 
 /* ABOUT page content */
@@ -294,6 +296,7 @@ svg{
     box-shadow: var(--shadow-darken);
     background-color: var(--tertiary-color-lighten);
     padding: 10px 20px;
+    border-radius: 3%;
     width: auto;
 }
 
@@ -310,7 +313,7 @@ svg{
 /* CONTACT page content */
 .contact-container{
     max-width: 900px;
-    margin: 80px 10%;
+    margin: 40px 12%;
 }
 
 #contact-form{
@@ -338,7 +341,7 @@ footer {
     clear: both;
     text-align: center;
     width: 100%;
-    padding-top: 80px;
+    padding-top: 200px;
     padding-bottom: 20px;
 }
 
@@ -398,7 +401,7 @@ footer {
 /* Mobile */
 @media all and (max-width: 720px) {
     body{
-        font-size: 7pt;
+        font-size: 8pt;
     }
 
     .namelogo{
@@ -437,6 +440,11 @@ footer {
         padding-left: -100px;
     }
 
+    .profile-description{
+        width: 200px;
+        margin: 0 auto;
+    }
+
     .project-list {
         grid-template-columns: 1fr;
         grid-gap: 20px;
@@ -448,10 +456,14 @@ footer {
     }
 
     .contact-container{
-        margin: 80px 20%;
+        margin: 30px 10%;
     }
 
     #contact-mes{
         width: 70vw;
+    }
+
+    footer {
+        padding-top: 20px;
     }
 }
