--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -17,7 +17,7 @@ body {
     background: #f8fafa;
     font-family: 'Caudex', serif;
     font-weight: 400;
-    font-size: 12pt;
+    font-size: 13pt;
     line-height: 1.6;
 }
 
@@ -29,12 +29,6 @@ h1 {
 
 h2 {
     font-size: 1.4em;
-    font-weight: 700;
-    font-family: 'Merriweather', serif;
-}
-
-h3 {
-    font-size: 1.1em;
     font-weight: 700;
     font-family: 'Merriweather', serif;
 }
@@ -111,7 +105,6 @@ button:focus {
 }
 
 .navigation__logo {
-    /* padding-left: 10px; */
     height: 60px;
 }
 
@@ -128,6 +121,7 @@ button:focus {
     font-size: 13pt;
     font-weight: 700;
 }
+
 a .namelogo-name {
     color: black;
 }
@@ -199,8 +193,7 @@ a .namelogo-name {
 /* INDEX page content */
 .profile-container {
     max-width: 900px;
-    margin: 20px auto;
-    padding: 0 40px;
+    margin: 6% auto;
     box-sizing: border-box;
 }
 
@@ -214,11 +207,14 @@ a .namelogo-name {
 
 .profile-description{
     padding-top: 60px;
+    /* width: 390px */
 }
 
 .B-Btext{
     background-color: #000080;
     color: #f8fafa;
+    border-radius: 10%;
+
 }
 
 /* ABOUT page content */
@@ -232,6 +228,11 @@ a .namelogo-name {
 .about-container__item{
     list-style-type: circle;
     margin: 10px auto;
+}
+
+.strong{
+    font-family: 'Merriweather', serif;
+    font-weight: 700
 }
 
 .centerBtn{
@@ -308,6 +309,7 @@ svg{
     box-shadow: 3px 5px 7px 1px rgba(0,0,0,0.3);
     background-color: #DFDFDF;
     padding: 10px 20px;
+    border-radius: 3%;
     width: auto;
 }
 
@@ -324,7 +326,7 @@ svg{
 /* CONTACT page content */
 .contact-container{
     max-width: 900px;
-    margin: 80px 10%;
+    margin: 40px 12%;
 }
 
 #contact-form{
@@ -362,7 +364,7 @@ footer {
     clear: both;
     text-align: center;
     width: 100%;
-    padding-top: 80px;
+    padding-top: 200px;
     padding-bottom: 20px;
 }
 
@@ -422,7 +424,7 @@ footer {
 /* Mobile */
 @media all and (max-width: 720px) {
     body{
-        font-size: 7pt;
+        font-size: 8pt;
     }
 
     .namelogo{
@@ -461,6 +463,11 @@ footer {
         padding-left: -100px;
     }
 
+    .profile-description{
+        width: 200px;
+        margin: 0 auto;
+    }
+
     .project-list {
         grid-template-columns: 1fr;
         grid-gap: 20px;
@@ -472,10 +479,14 @@ footer {
     }
 
     .contact-container{
-        margin: 80px 20%;
+        margin: 30px 10%;
     }
 
     #contact-mes{
         width: 70vw;
+    }
+
+    footer {
+        padding-top: 20px;
     }
 }
