--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -1,15 +1,15 @@
 /*
-Colors used 
+Colors used
 Primary Color:         #000080; (Dark Blue Klein)
 Primary Color lighten: #0000CD; (Blue Klein)
 Secondary Color:       #81D8D0; (Blue Tiffany)
 Tertiary Color:        #A9A9A9; (Darkgrey)
-Text Color:   
+Text Color:
 Primary text font:     'Caudex', serif
 Secondary text font:   'Merriweather', serif
 */
 
-* { 
+* {
     box-sizing: border-box;
 }
 
@@ -152,7 +152,6 @@ a .namelogo-name {
 .navigation-list li {
     display: inline-block;
     margin: 0 15px 0 15px;
-    
 }
 
 .navigation-list__item--active {
@@ -207,7 +206,6 @@ a .namelogo-name {
 
 .profile-description{
     padding-top: 60px;
-    /* width: 390px */
 }
 
 .B-Btext{
@@ -317,7 +315,7 @@ svg{
     grid-column: 3 / 3;
     grid-row: 1 / 3;
     font-size: 1.1em;
-} 
+}
 
 .project-list__item:last-child a{
     margin: 0 auto;
@@ -334,7 +332,7 @@ svg{
 }
 
 #contact-mes{
-    width: 300px;   
+    width: 300px;
     height: 200px;
     padding: 10px 4px;
     border: solid #DFDFDF 0.3px;
@@ -357,6 +355,12 @@ svg{
     border: solid #0000CD 1.4px;
     outline: none !important;
     box-shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
+}
+
+
+.error-message {
+    font-size: 12px;
+    color: red;
 }
 
 /* footer */
