--- a/css/styles.css
+++ b/css/styles.css
@@ -8,33 +8,50 @@ Text Color:
 Primary text font:     'Caudex', serif
 Secondary text font:   'Merriweather', serif
 */
+:root {
+    --primary-color: #000080;
+    --primary-color-lighten: #0000CD;
+    --secondary-color: #0000FF;
+    --tertiary-color: rgb(156, 156, 156);
+    --tertiary-color-lighten: #DFDFDF;
+    --shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
+    --shadow-darken : 3px 5px 7px 1px rgba(0,0,0,0.3);
+    --weight-bold: 700;
+    --body-color: #f8fafa;
+    --body-color-darken: #f5f5f5;
+    --primary-font: 'Caudex', serif;
+    --secondary-font: 'Merriweather', serif;
+    --text-size: 13pt;
+    --h1-size: 2.6em;
+    --h2-size: 1.4em;
+}
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    background: #f8fafa;
-    font-family: 'Caudex', serif;
+    background: var(--body-color);
+    font-family: var(--primary-font);
     font-weight: 400;
-    font-size: 13pt;
+    font-size: var(--text-size);
     line-height: 1.6;
 }
 
 h1 {
-    font-size: 2.6em;
-    font-weight: 700;
-    font-family: 'Merriweather', serif;
+    font-size: var(--h1-size);
+    font-weight: var(--weight-bold);
+    font-family: var(--secondary-font);
 }
 
 h2 {
-    font-size: 1.4em;
-    font-weight: 700;
-    font-family: 'Merriweather', serif;
+    font-size: var(--h2-size);
+    font-weight: var(--weight-bold);
+    font-family: var(--secondary-font);
 }
 
 a {
-    color: #0000CD;
+    color: var(--primary-color-lighten);
 }
 
 a:hover, a:focus {
@@ -43,57 +60,31 @@ a:hover, a:focus {
     transition: 0.1s opacity;
 }
 
-.button {
-    border: none;
-    display: inline-block;
-    font-family: inherit;
-    background-color: #000080;
-    color: #f8fafa;
-    text-decoration: none;
-    padding: 8px;
-    border-radius: 3px;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-}
-
+.button,
 button {
     border: none;
     display: inline-block;
     font-family: inherit;
-    background-color: #000080;
-    color: #f8fafa;
+    background-color: var(--primary-color);
+    color: var(--body-color);
     text-decoration: none;
     padding: 8px;
     border-radius: 3px;
     border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 }
 
-.button:hover {
-    cursor: pointer;
-    opacity: 0.89;
-    box-shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
-}
-
-.button:focus {
-    cursor: pointer;
-    opacity: 0.89;
-    box-shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
-}
-
-button:hover {
-    cursor: pointer;
-    opacity: 0.89;
-    box-shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
-}
-
+.button:hover,
+.button:focus,
+button:hover,
 button:focus {
     cursor: pointer;
     opacity: 0.89;
-    box-shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
+    box-shadow: var(--shadow);
 }
 
 .legend{
     font-size: 7pt;
-    color: rgb(156, 156, 156);
+    color: var(--tertiary-color);
 }
 
 /* NAV */
@@ -101,7 +92,7 @@ button:focus {
     display: flex;
     width: 100%;
     padding: 5px 5px 0 5px ;
-    background-color: #f5f5f5;
+    background-color: var(--body-color-darken);
 }
 
 .navigation__logo {
@@ -117,9 +108,9 @@ button:focus {
 }
 
 .namelogo-name{
-    font-family: 'Caudex', serif;
+    font-family: var(--primary-font);
     font-size: 13pt;
-    font-weight: 700;
+    font-weight: var(--weight-bold);
 }
 
 a .namelogo-name {
@@ -127,7 +118,7 @@ a .namelogo-name {
 }
 
 .namelogo-caption{
-    font-family: 'Caudex', serif;
+    font-family: var(--primary-font);
     font-size: 9pt;
     text-align: center;
     letter-spacing: 2px;
@@ -138,7 +129,7 @@ a .namelogo-name {
 .page-header__item {
     flex: 0 1 200px;
     list-style-type: none;
-    color: #0000CD;
+    color: var(--primary-color-lighten);
 }
 
 .page-header__item:last-child {
@@ -156,7 +147,7 @@ a .namelogo-name {
 
 .navigation-list__item--active {
     text-decoration: none;
-    color: #000080;
+    color: var(--primary-color);
 }
 
 .dropbtn {
@@ -170,9 +161,9 @@ a .namelogo-name {
     display: none;
     border-radius: 3px;
     position: absolute;
-    background-color: #f8fafa;
+    background-color: var(--body-color);
     max-width: 160px;
-    box-shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
+    box-shadow: var(--shadow);
 }
 
 .dropdown-menu:hover .dropdown-menu-list {
@@ -182,7 +173,7 @@ a .namelogo-name {
 .dropdown-menu-list a {
     float: none;
     font-size: 15px;
-    color: #0000CD;
+    color: var(--primary-color-lighten);
     padding: 12px 26px;
     text-decoration: none;
     display: block;
@@ -201,16 +192,17 @@ a .namelogo-name {
     width: 370px;
     margin: 60px 50px;
     border-radius: 20%;
-    box-shadow: 3px 5px 7px 1px rgba(0,0,0,0.3);
+    box-shadow: var(--shadow-darken);
 }
 
 .profile-description{
     padding-top: 60px;
+    /* width: 390px */
 }
 
 .B-Btext{
-    background-color: #000080;
-    color: #f8fafa;
+    background-color: var(--primary-color);
+    color: var(--body-color);
     border-radius: 10%;
 
 }
@@ -229,8 +221,8 @@ a .namelogo-name {
 }
 
 .strong{
-    font-family: 'Merriweather', serif;
-    font-weight: 700
+    font-family: var(--secondary-font);
+    font-weight: var(--weight-bold)
 }
 
 .centerBtn{
@@ -244,13 +236,9 @@ a .namelogo-name {
     max-width: 900px;
 }
 
-.front-end-skill h3{
-    border-right: #0000CD 1px solid;
-    padding: 10px;
-}
-
+.front-end-skill h3,
 .back-end-skill h3{
-    border-right: #0000CD 1px solid;
+    border-right: var(--primary-color-lighten) 1px solid ;
     padding: 10px;
 }
 
@@ -259,7 +247,7 @@ table{
 }
 
 thead th{
-    font-family: 'Merriweather', serif;
+    font-family: var(--secondary-font);
     text-align: left;
     width: 80px;
     margin: 0 4% 0 0;
@@ -272,12 +260,12 @@ tr :last-child{
 svg{
     width: 60%;
     margin: 0 20%;
-    box-shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
+    box-shadow: var(--shadow);
 }
 
 .SVGlegend{
     padding-top: 1px;
-    color: rgb(156, 156, 156);
+    color: var(--tertiary-color);
     text-decoration: none;
     margin: 0 21%;
 }
@@ -304,8 +292,8 @@ svg{
 .project-list__item {
     display: inline-block;
     width: 33%;
-    box-shadow: 3px 5px 7px 1px rgba(0,0,0,0.3);
-    background-color: #DFDFDF;
+    box-shadow: var(--shadow-darken);
+    background-color: var(--tertiary-color-lighten);
     padding: 10px 20px;
     border-radius: 3%;
     width: auto;
@@ -340,32 +328,16 @@ svg{
     width: 300px;
     height: 200px;
     padding: 10px 4px;
-    border: solid #DFDFDF 0.3px;
+    border: solid var(--tertiary-color-lighten) 0.3px;
     min-height: 60px;
 }
 
-#contact-tel:focus {
-    border: solid #0000CD 1.4px;
-    outline: none !important;
-    box-shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
-}
-
-#contact-email:focus {
-    border: solid #0000CD 1.4px;
-    outline: none !important;
-    box-shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
-}
-
+#contact-tel:focus,
+#contact-email:focus,
 #contact-mes:focus {
-    border: solid #0000CD 1.4px;
+    border: solid var(--primary-color-lighten) 1.4px;
     outline: none !important;
-    box-shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
-}
-
-
-.error-message {
-    font-size: 12px;
-    color: red;
+    box-shadow: var(--shadow);
 }
 
 /* footer */
