--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -198,9 +198,9 @@ a .namelogo-name {
 
 .profile__portrait {
     float: left;
-    width: 370px;
+    width: 400px;
     margin: 60px 50px;
-    border-radius: 20%;
+    border-radius: 35px;
     box-shadow: 3px 5px 7px 1px rgba(0,0,0,0.3);
 }
 
@@ -273,6 +273,7 @@ svg{
     width: 60%;
     margin: 0 20%;
     box-shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
+    border-radius: 30px;
 }
 
 .SVGlegend{
