--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@
 Colors used
 Primary Color:         #000080; (Dark Blue Klein)
 Primary Color lighten: #0000CD; (Blue Klein)
-Secondary Color:       #81D8D0; (Blue Tiffany)
-Tertiary Color:        #A9A9A9; (Darkgrey)
+Secondary Color:       #0000FF; (Light Blue)
+Tertiary Color:        #9c9c9c; (Darkgrey)
 Text Color:
 Primary text font:     'Caudex', serif
 Secondary text font:   'Merriweather', serif
@@ -12,10 +12,10 @@ Secondary text font:   'Merriweather', serif
   --primary-color: #000080;
   --primary-color-lighten: #0000CD;
   --secondary-color: #0000FF;
-  --tertiary-color: rgb(156, 156, 156);
+  --tertiary-color: #9c9c9c;
   --tertiary-color-lighten: #DFDFDF;
-  --shadow: 1px 3px 5px 2px rgba(0,0,0,0.3);
-  --shadow-darken : 3px 5px 7px 1px rgba(0,0,0,0.3);
+  --shadow: 1px 3px 5px 0px rgba(0,0,0,0.3);
+  --shadow-darken : 3px 5px 7px 0px rgba(0,0,0,0.3);
   --weight-bold: 700;
   --body-color: #f8fafa;
   --body-color-darken: #f5f5f5;
@@ -56,19 +56,21 @@ a {
 
 a:hover, a:focus {
   text-decoration: none;
-  opacity: 0.7;
+  opacity: 0.8;
   transition: 0.1s opacity;
 }
 
 .button,
 button {
+  line-height: 1;
+  margin: 0 3px;
   border: none;
   display: inline-block;
   font-family: inherit;
   background-color: var(--primary-color);
   color: var(--body-color);
   text-decoration: none;
-  padding: 8px;
+  padding: 6px;
   border-radius: 3px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 }
@@ -289,6 +291,11 @@ svg{
   grid-gap: 20px;
 }
 
+.project-list__img{
+  max-width: 100%;
+  margin: auto;
+}
+
 .project-list__item {
   display: inline-block;
   width: 33%;
@@ -301,7 +308,7 @@ svg{
 
 .project-list__item:last-child {
   grid-column: 3 / 3;
-  grid-row: 1 / 3;
+  grid-row: 3 / 4;
   font-size: 1.1em;
 }
 
@@ -313,6 +320,11 @@ svg{
 .contact-container{
   max-width: 900px;
   margin: 40px 12%;
+}
+
+input{
+  line-height: 1.4;
+  padding: 3px;
 }
 
 #contact-form{
