--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -273,6 +273,55 @@ tr :last-child{
   width: 190px;
 }
 
+.tech-icon{
+  width: 100%;
+  margin: 0 auto;
+  padding: 15px;
+  border-radius: 30px;
+}
+
+.tech-icon__img {
+  width: 92px;
+  height: 92px;
+  margin: 8px;
+  border-radius: 50%;
+  backface-visibility: hidden;
+  filter: drop-shadow(0 0 1rem grey);
+}
+
+.tech-icon__item {
+  position: relative;
+  display: inline-block;
+}
+
+.tech-icon__item .tooltip-text {
+  visibility: hidden;
+  color: #000080;
+  border-radius: 6px;
+  padding: 5px 10px;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 19px;
+  font-weight: 700;
+}
+
+.tech-icon__item:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
+  transition: .4s ease .3s;
+}
+
+.tech-icon__item:hover img {
+  transition: .3s ease .3s ;
+  transform: scale(1.19);
+  opacity: 0.1;
+}
+
 svg{
   width: 60%;
   margin: 0 20%;
@@ -315,15 +364,15 @@ svg{
   display: inline-block;
   width: 33%;
   box-shadow: 3px 5px 7px 0px rgba(0,0,0,0.3);
-  background-color: #DFDFDF;
   padding: 10px 20px;
   border-radius: 3%;
   width: auto;
+  background-color: #f5f5f5;
 }
 
 .project-list__item:last-child {
-  grid-column: 3 / 3;
-  grid-row: 3 / 4;
+  grid-column: 1 / 3;
+  grid-row: 4 / 4;
   font-size: 1.1em;
 }
 
@@ -355,7 +404,7 @@ input{
   width: 300px;
   height: 200px;
   padding: 10px 4px;
-  border: solid #DFDFDF 0.3px;
+  border: solid #dfdfdf 0.3px;
   min-height: 60px;
 }
 
@@ -489,6 +538,12 @@ footer {
 
   .about-container__item{
     width: 90vw;
+  }
+
+  .tech-icon__img {
+    width: 46px;
+    height: 46px;
+    margin: 4px;
   }
 
   .centerBtn{
